--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,20 @@ extra:
   analytics:
     property: G-QH18YNN9CM
     provider: google
+    feedback:
+      title: Was this page helpful?
+      ratings:
+        - icon: material/emoticon-happy-outline
+          name: This page was helpful
+          data: 1
+          note: >-
+            Thanks for your feedback!
+        - icon: material/emoticon-sad-outline
+          name: This page could be improved
+          data: 0
+          note: >-
+            Thanks for your feedback! Help us improve this page by
+            using our <a href="..." target="_blank" rel="noopener">feedback form</a>.
 
 #Markdown extensions
 markdown_extensions:
